# python-testing

./: pyproject.toml
python_tests/: wordle.py
tests/: test_foo.py
