[tool.poetry]
name = "python-tests"
version = "0.1.0"
description = ""
authors = ["Barbora Kaminskas <106600778+babskami@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_tests"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
